fixed hero gaps

--- a/style.css
+++ b/style.css
@@ -172,7 +172,7 @@ h6 {
   flex-wrap: wrap;
   margin-top: 50px;
   margin-bottom: 96px;
-  gap: 30px;
+  gap: 48px;
 }
 
 embed {
@@ -196,7 +196,6 @@ embed {
 .hero img {
   object-fit: cover;
   width: 100%;
-  height: 100%;
   border-radius: 20px;
 }
 
@@ -386,19 +385,14 @@ embed {
     height: 430px;
     width: 50px;
   }
-  .hero-intro {
-    gap: 124px;
-  }
   footer {
     flex-direction: row;
   }
-
   .socials {
     flex-grow: 1;
     justify-content: center;
     gap: 58px;
   }
-
   .footer-text {
     flex-grow: 0;
   }
